--- a/index.html
+++ b/index.html
@@ -50,17 +50,18 @@
         }
 
         div {
-            width: 650px;
+            width: 45%;
+            height: auto;
         }
 
         .java {
             float: left;
-            width: 700px;
+           
         }
 
         .python {
             float: right;
-            width: 700px;
+            
         }
 
         @media (max-width: 430px) {
