--- a/index.html
+++ b/index.html
@@ -96,12 +96,16 @@
             img {
                 width: 100%;
                 display: block;
+                padding: 0px;
+                
 
             }
 
             div{
                 width: 100%;
                 display: inline;
+                padding: 0px;
+                
             }
 
         }
